--- a/index[1].html
+++ b/index[1].html
@@ -220,7 +220,7 @@
 
   <div class="wrapper">
     <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
-      <h1 id="html5style2h1">StarTrackr!</h1>
+      <h1 id="html5-ch1-7h1">StarTrackr!</h1>
       <div class="col-12">
         <img class="logo" src="img/flexy-logo.png">
       </div><!-- end-col-12 -->
@@ -231,10 +231,10 @@
         <img src="img/kite.png">
       </div>
     </div><!-- end-.row -->
-    <div class="data" id="#html5style2content">
+    <div class="data" id="#html5-ch1-7content">
     <div class="row">
       <div class="çol-12" padding="2%">
-        <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
+        <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!</h2>
       </div><!-- end-col-12 -->
     </div><!-- end-row -->
     <!-- <div class="data" id="#html5style2content"> -->
@@ -243,13 +243,13 @@
         <div class="çol-12">
           <img src="img/paper.png" ;>
 
-          <div class="data" id="html5style2leftcol">
+          <div class="data" id="html5-ch1-7leftcol">
             <h3>Cottages, converted barns, caravans</h3>
             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
             <br>The superb interior of one of our cottages
           </div>
 
-          <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+          <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
               <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
               <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -260,7 +260,7 @@
           </nav>
 
           <!--</div> removed and replaced with </nav>-->
-          <div class="data" id="html5style2midcol">
+          <div class="data" id="html5-ch1-7midcol">
             <h3>Situated in the BDA's beautiful countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
           </div>
@@ -348,7 +348,7 @@
         </div><!-- end col-11 -->
       </div> <!-- end class row -->
 
-      <div class="row" style="background-color: #1ABC9C>
+      <div class="row" style="background-color: #1ABC9C">
         div class="col-11">
 			<ul id="gallery-3col-mix">
 					<li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
