--- a/index[1].html
+++ b/index[1].html
@@ -25,7 +25,7 @@
         <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script> 
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 		<link rel="stylesheet" href="./style.css"> 
-        <link rel="stylesheet" href="./style[1].css"> 
+       <!-- <link rel="stylesheet" href="./style[1].css"> -->
        
 	   
         <link rel="stylesheet" href="./nav[1].css">
