--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -107,12 +107,23 @@
         </div><!-- end-.row -->
 		
 		<div class="wrapper">
-	
+	        <!--
 	        <div class="row" id="html5-ch1-7header">
 		        <div class="col-12">
 			        <img class="logo" src="img/flexy-logo.png">
-		        </div><!-- end-col-12 -->
+		        </div><!-- end-col-12 --
 	        </div><!-- end-header -->
+            <div class="row">
+                <div class="col-12">
+                    <header class="data" id="html5-ch1-7header"> <!-- <div id="hdr"> changed to <header> -->
+			            <div class="data" id="html5style2banner">
+                            <h1>StarTrackr!</h1>
+                        </div>
+                    </header>
+		        </div>
+            </div><!-- end col-12 -->
+	        <br class="clear">
+            <!--close top section - content area starts -->
 	
 	        <div id="html5-ch1-7content">
                 <h2>Award winning accommodation, self catering or bed and breakfast</h2>
@@ -231,19 +242,8 @@
         </div>
     </div>
                  
-</div><!-- end-wrapper --
+</div><!-- end-wrapper -->
 		
-        <div class="row">
-            <div class="col-12">
-                <header class="data" id="html5-ch1-7header"> <!-- <div id="hdr"> changed to <header> --
-			        <div class="data" id="html5style2banner">
-                        <h1>StarTrackr!</h1>
-                    </div>
-                </header>
-		    </div>
-        </div><!-- end col-12 --
-	    <br class="clear">
-        <!--close top section - content area starts -->
     
         <div class="data" id="html5-ch1-7content">
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
