--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         <script type="text/javascript" src="./js/jquery-1.7-min.js"></script>
         <script! src="./js/script.js"></script>
+        <script! src="./js/scripts.js"></script>
         <script! src="scripts.js"></script>
     
 	
