--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -24,7 +24,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Core theme CSS (includes Bootstrap) -->
-		<link rel="stylesheet" href="./CSS/HTML5-style-2.css">
+		<link rel="stylesheet" href="./style.css">
 		<!--
 		<link rel="stylesheet" href="./CSS/flexboxgrid.css">
         <link rel="stylesheet" href="./CSS/style.css">
