--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -134,7 +134,7 @@
 			        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
                 </div>
 
-        <nav><!--use the semantic tag <nav>-->
+        <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
