--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -114,10 +114,10 @@
 		        <div class="col-12">
 			        <img class="logo" src="img/flexy-logo.png">
 		        </div><!-- end-col-12 -->
-	        </div><!-- end-header -->
+	        </div><!-- end-header --
             <div class="row">
                 <div class="col-12">
-                    <header class="data" id="html5-ch1-7header"> <!-- <div id="hdr"> changed to <header> -->
+                    <header class="data" id="html5-ch1-7header"> <!-- <div id="hdr"> changed to <header> --
 			            <div class="data" id="html5style2banner">
                             <h1>StarTrackr!</h1>
                         </div>
