--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -107,6 +107,16 @@
                 </nav>
             </div><!-- col-12 -->
         </div><!-- end-.row -->
+
+        <div class="row">
+                <div class="col-12">
+                    <header class="data" id="html5-ch1-7header"> <!-- <div id="hdr"> changed to <header> -->
+			            <div class="data" id="html5style2banner">
+                            <h1>StarTrackr!</h1>
+                        </div>
+                    </header>
+		        </div>
+            </div><!-- end col-12 -->
 		
 		<div class="wrapper">
 	        
@@ -115,15 +125,7 @@
 			        <img class="logo" src="img/flexy-logo.png">
 		        </div><!-- end-col-12 -->
 	        </div><!-- end-header --
-            <div class="row">
-                <div class="col-12">
-                    <header class="data" id="html5-ch1-7header"> <!-- <div id="hdr"> changed to <header> --
-			            <div class="data" id="html5style2banner">
-                            <h1>StarTrackr!</h1>
-                        </div>
-                    </header>
-		        </div>
-            </div><!-- end col-12 -->
+            
 	        <br class="clear">
             <!--close top section - content area starts -->
 	
