--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -119,11 +119,11 @@
             </div><!-- end col-12 -->
 		
 		<div class="wrapper">
-	        
+	        <!--
 	        <div class="row" id="html5-ch1-7header">
 		        <div class="col-12">
 			        <img class="logo" src="img/flexy-logo.png">
-		        </div><!-- end-col-12 -->
+		        </div><!-- end-col-12 --
 	        </div><!-- end-header --
             
 	        <br class="clear">
