--- a/aside.html
+++ b/aside.html
@@ -5,145 +5,114 @@
     <!-- <meta details go here> -->
     <meta charset="UTF-8">
     <title>HTML5 exercise, an aside</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="x-UA Compatible" content="ie=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <!-- Viewport for responsive web design -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+        <meta property="og:title" content="A Basic HTML5 Template">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="A simple HTML5 Template for new projects.">
+        <meta property="og:image" content="image.png">
+        <meta name="keywords" content="HTML5, Node.js, Jquery">
+        <meta name="author" content="Orris Baker">
+		
+		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./script.js"></script> 
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
+        
+        <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> -->
+        <link rel="stylesheet" href="./style[1].css">
+        <link rel="stylesheet" href="./nav[1].css">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+		<link rel="icon" type="image/jpg" href="./img/logo.jpg">
+          
+        <link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
 
-    <meta property="og:type" content="video.movie" />
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
-    <meta name="description" content="A simple HTML5 Template for new projects.">
-    <meta name="author" content="Orris A BakerJr">
-    <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+		<!--
+  
+        <link rel="stylesheet" href="./CSS/gallery-3col-mix.css" type="text/css" media="screen" charset="utf-8">
+        <!-- 01_lightbox --
+        <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
+        <!-- 02_colorbox --
+        <link rel="stylesheet" href="./CSS/colorbox.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" href="./scroll.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./fonts/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css">
 
-    <meta property="og:title" content="A Basic HTML5 Template">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-    <meta property="og:description" content="A simple HTML5 Template for new projects.">
-    <meta property="og:image" content="image.png">
-    <meta name="theme-color" content="#712cf9">
-    <meta name="keywords" content="HTML5, Node.js, Jquery">
-    <meta name="author" content="Ian Andolina">
-    <!-- Optional Metadata-->
-    <meta property="og:audio" content="https://orris0.github.io/sound.mp3" />
-    <meta property="og:audio:secure_url" content="https://secure.orris0.github.io/sound.mp3" />
-    <meta property="og:audio:type" content="audio/mpeg" />
-    <meta property="og:audio" content="https://orris0.github.io/bond/theme.mp3" />
-    <meta property="og:description"
-        content="Orris Baker found assaulted and mistreated at the BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly." />
-    <meta property="og:determiner" content="the" />
-    <meta property="og:locale" content="en_GB" />
-    <meta property="og:locale:alternate" content="fr_FR" />
-    <meta property="og:locale:alternate" content="es_ES" />
-    <meta property="og:site_name" content="IMDb" />
-    <!--og: video example:-->
-    <meta property="og:video" content="https://orris0.github.io/bond/trailer.swf" />
-    <meta property="og:video" content="https://orris0.github.io/movie.swf" />
-    <meta property="og:video:secure_url" content="https://secure.example.com/movie.swf" />
-    <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:video:width" content="400" />
-    <meta property="og:video:height" content="300" />
-    <!-- A full image example:-->
-    <meta property="og:image" content="https://orris0.github.io/ogp.jpg" />
-    <meta property="og:image:secure_url" content="https://secure.orris0.github.io/ogp.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
-    <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
-    <meta property="og:image" content="https://orris0.github.io/rock.jpg" />
-    <meta property="og:image:width" content="300" />
-    <meta property="og:image:height" content="300" />
-    <meta property="og:image" content="https://orris0.github.io/rock2.jpg" />
-    <meta property="og:image" content="https://orris0.github.io/rock3.jpg" />
-    <meta property="og:image:height" content="1000" />
-    <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
-    <!-- Font Awesome Icons -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <!-- Theme CSS - Includes Bootstrap -->
+        <!-- Favicon-->
+        <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+        <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+        <link rel="author" href="mailto:bakerorris0@gmail.com">
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+        <!-- SimpleLightbox plugin CSS-->
+        <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+  
+        <!-- <link rel="stylesheet" type="text/css" href="../CSS/equal-2d.css"> --
+        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css">
+        <!-- Font Awesome Icons -->
+        <link rel="icon" href="./favicon.ico" sizes="any">
+        <link rel="icon" href="./icon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="./icon.png">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <!-- Plugin CSS -->
+        <!-- Theme CSS - Includes Bootstrap -->
+        <!-- Favicon-->
+        <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+        <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+        <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+        <!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
+            <script src="js/html5.js" type="text/javascript"></script>
+        <![endif]-->
+    </head>
 
-    <link rel="stylesheet" href="CSS/flexboxgrid.css" />
-    <link rel="stylesheet" href="CSS/font-awesome.min.css" />
+    <body>
+	    <div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./index[1].html">About Us</a></li>
+                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./news.html">Blog</a></li>
+                        <li><a href="./starter-page.html">Specials</a></li>
+                        <li><a href="./welcome.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row -->
 
-    <style>
-        body {
-            background: linear-gradient(#fb3, #58a);
-        }
-    </style>
-    <!-- Favicon-->
-    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-    <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
-    <link rel="author" type="text/html" href="https://orris0.github.io/">
-    <!-- Bootstrap Icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- SimpleLightbox plugin CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <!--
-        <script src=”http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js”></script>
-        <script src=”js/jquery.mobile-1.0.1.min.js”></script>
-    -->
-    <script type=”text/javascript” src=”assets/js/ui.js”></script>
-    <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-
-
-
-    <script src="js/prefixfree.min.js"></script>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
-    <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
-    <style type="text/css">
-        h1 {
-            font-size: 160%;
-            font-weight: bold;
-        }
-
-        aside,
-        section,
-        article {
-            display: block;
-        }
-
-        section {
-            width: 450px;
-            margin: auto;
-        }
-
-        article {
-            width: 445px;
-            text-align: left;
-        }
-
-        aside {
-            width: 180px;
-            padding: 5px;
-            margin: 5px 0 0 5px;
-            float: right;
-            border: 1px black solid;
-        }
-    </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-        crossorigin="anonymous"></script>
-    <!--Add conditional Javascript-->
-    <!--[if lte IE 8]>
-                <script src="js/html5.js" type="text/javascript"></script>
-            <![endif]-->
-
-</head>
-
-<body>
+        <div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+                <h1 id="html5style2h1">StarTrackr!</h1>
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+            </header>
+            <br class="clear">
     <noscript>
         <p>
             Hey, your browser has JavaScript turned off!
