Comment out sections in index[1].html

--- a/index[1].html
+++ b/index[1].html
@@ -169,7 +169,7 @@
               <li><a href="#">Gift Ideas</a></li>
             </ul>
           </div>
-
+              <!--
           <header class="data" id="gallerypageheader">
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
@@ -226,7 +226,7 @@
                 <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid"
                       src="images/cliffbig.jpg" alt=""></a></li>
               </ul><br class="clear">
-            </div><!--gallery block closed-->
+            </div><!--gallery block closed--
           </div><!--midcol closed-->
 
           <p id="intro">
@@ -238,7 +238,7 @@
       </div> <!-- end class row -->
 
       <div class="row" style="background-color: #1ABC9C">
-        div class="col-11">
+        <!-- div class="col-11">
 			<ul id="gallery-3col-mix">
 					<li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
 							<img class="hid" src="images/alilarge.jpg" alt=""></a>
