--- a/index[1].html
+++ b/index[1].html
@@ -469,7 +469,7 @@
       </p>
     </div>
 
-  </div><!-- end-container -->
+  <!-- </div><!-- end-container -->
 
   <!-- document ready -->
   <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
@@ -487,7 +487,7 @@
   <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8">
   <script src="./jquery.easing.1.3.js"></script>
   <script src="./js/bootstrap.bundle.js.map"></script>
-
+    </div><!-- end-.wrapper -->
 </body>
 
 </html>
