--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -101,7 +101,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./index[1].html">About Us</a></li>
-                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./creatingawebsite.html">Products</a></li>
                         <li><a href="./news.html">Blog</a></li>
                         <li><a href="./starter-page.html">Specials</a></li>
                         <li><a href="./welcome.html">Contact</a></li>
