Update product link and image section in membership.html

--- a/membership.html
+++ b/membership.html
@@ -298,7 +298,7 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./index[1].html">About Us</a></li>
-          <li><a href="./membership.html">Products</a></li>
+          <li><a href="./creatingawebsite.html">Products</a></li>
           <li><a href="./news.html">Blog</a></li>
           <li><a href="./starter-page.html">Specials</a></li>
           <li><a href="./welcome.html">Contact</a></li>
@@ -759,7 +759,7 @@
                                 <section class="slider">
                                     <ul class="slider1">
                                         <li><img src="../orris0/BRC-1.jpeg" width="715px" height="445px"></li>
-                                       <!-- <li><img src="../orris0/BRC-2.jpeg"width="730px" height="440px" ></li>
+                                        <li><img src="../orris0/BRC-2.jpeg"width="730px" height="440px" ></li>
                                         <li><img src="../orris0/BRC-3.jpg" width="730px" height="440px"></li>
                                         <li><img src="./CSS/images/tth2.jpeg" width="730px" height="440px"></li>
                                         <li><img src="./CSS/images/tth1.jpeg" width="730px" height="440px" ></li>
@@ -772,7 +772,6 @@
                                         <li><img src="../orris0/21056097_1103310623137040_7102033858373126291_o.jpg" width="730px" height="440px"></li>
                                         <li><img src="../orris0/images/post-cia/58462268_10210491895253489_5615415460276207616_n.jpg" width="730px" height="440px"></li>
                                         <li><img src="../orris0/images/post-cia/58462268_10210491895253489_5615415460276207616_n.jpg" width="730px" height="440px"></li>
-                                    -->
                                     </ul>
                                 </section>
                             </div>
