--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -29,8 +29,8 @@
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 		<link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
         
-        <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> -->
-        <link rel="stylesheet" href="./style[1].css">
+        <!-- <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8"> --
+        <link rel="stylesheet" href="./style[1].css"> -->
         <link rel="stylesheet" href="./nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
