Fix HTML comments and formatting in about.html

--- a/about.html
+++ b/about.html
@@ -151,9 +151,9 @@
                         Okay, cool, perhaps you'll prefer this <a href="no-js.html">non-JavaScript version</a> of the page.
                     </p>
                     </noscript>
-	        </header><!-- end-header -->
-	        -->
-                <div class="col-12"> <!-- close top section - content area starts -->
+	        </header><!-- end-header --
+	        --
+                <div class="col-12"> <!-- close top section - content area starts --
 		        <div id="hnav">
                 <ul>
                     <li><a href="index.html">Home Page</a></li>
@@ -169,7 +169,7 @@
                 <div class="picture">
                 <p><img title="Koala" alt="Koala" height="82" src="images/Koalasmall.jpg" width="110"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p> 
                 </div>                
-                <br class="clear"> -->
+                <br class="clear"> --
 	        <div id="navigation">
                     <menu>
                         <ul>
@@ -181,7 +181,7 @@
                             <li><a href="simplistic-html5.html" title="Orris Baker" class="parallel"><div>CEO_Webdeveloper</div></a></li>
                             <li><a href="index.html" title="Larvern Smith" class="parallel"><div>Requirement_Analyst</div></a></li>
                         </ul>
-                    </menu><!-- end-nav -->
+                    </menu><!-- end-nav --
                 </div>
                 <!-- RIGHT-COL --
                 <div id="rightcol">
