Update image paths in about.html

--- a/about.html
+++ b/about.html
@@ -252,20 +252,20 @@
                             <div class="slide-wrap">
                                 <section class="slider">
                                     <ul class="slider1">
-                                        <li><img src="../orris0/BRC-1.jpeg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/BRC-2.jpeg"width="730px" height="440px" ></li>
-                                        <li><img src="../orris0/BRC-3.jpg" width="730px" height="440px"></li>
-                                        <li><img src="./CSS/images/tth2.jpeg" width="730px" height="440px"></li>
-                                        <li><img src="./CSS/images/tth1.jpeg" width="730px" height="440px" ></li>
+                                        <li><img src="./BRC-1.jpeg" width="715px" height="445px"></li>
+                                        <li><img src="./BRC-2.jpeg"width="730px" height="440px" ></li>
+                                        <li><img src="./BRC-3.jpg" width="730px" height="440px"></li>
+                                        <li><img src="./images/tth2.jpeg" width="730px" height="440px"></li>
+                                        <li><img src="./images/tth1.jpeg" width="730px" height="440px" ></li>
                                         <li><img src="./CSS/images/tth3.jpeg" width="730px" height="440px"></li>
-                                        <li><img src="../orris0/BRC-4.jpeg" width="730px" height="440px"></li>
-                                        <li><img src="../orris0/BRC-5.jpg" width="730px" height="440px"></li>
-                                        <li><img src="../orris0/images/17834259_10212272264139968_3776697343411319324_o.jpg" width="730px" height="440px" ></li>
+                                        <li><img src="./BRC-4.jpeg" width="730px" height="440px"></li>
+                                        <li><img src="./BRC-5.jpg" width="730px" height="440px"></li>
+                                        <li><img src="./images/17834259_10212272264139968_3776697343411319324_o.jpg" width="730px" height="440px" ></li>
                                    
-                                        <li><img src="../orris0/19554044_10155506423238410_1406815874490367108_n.jpg" width="730px" height="440px" ></li>
-                                        <li><img src="../orris0/21056097_1103310623137040_7102033858373126291_o.jpg" width="730px" height="440px"></li>
-                                        <li><img src="../orris0/images/post-cia/58462268_10210491895253489_5615415460276207616_n.jpg" width="730px" height="440px"></li>
-                                        <li><img src="../orris0/images/post-cia/58462268_10210491895253489_5615415460276207616_n.jpg" width="730px" height="440px"></li>
+                                        <li><img src="./19554044_10155506423238410_1406815874490367108_n.jpg" width="730px" height="440px" ></li>
+                                        <li><img src="./21056097_1103310623137040_7102033858373126291_o.jpg" width="730px" height="440px"></li>
+                                        <li><img src="./images/post-cia/58462268_10210491895253489_5615415460276207616_n.jpg" width="730px" height="440px"></li>
+                                        <li><img src="./images/post-cia/58462268_10210491895253489_5615415460276207616_n.jpg" width="730px" height="440px"></li>
 
                                     </ul>
                                 </section>
