--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
     </head>
 
     <body>
-	    <div class="row">
+	    <!-- <div class="row">
             <div class="col-12">
                 <nav role="navigation" id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
@@ -110,18 +110,18 @@
                         <li><a href="./welcome.html">Contact</a></li>
                     </ul>
                 </nav>
-            </div><!-- col-12 -->
+            </div><!-- col-12 --
         </div><!-- end-.row -->
 
         <div class="wrapper">
-            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+         <!--   <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> --
                 <h1 id="html5style2h1">StarTrackr!</h1>
                 <div class="col-12">
                     <img class="logo" src="img/flexy-logo.png">
-                </div><!-- end-col-12 -->
+                </div><!-- end-col-12 --
             </header>
             <br class="clear">
-		<!--
+		
         <div class="wrapper">
             <div class="data" id="container">
             
