--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -112,8 +112,8 @@
         </div><!-- end-.row -->
 
         <div class="wrapper">
-            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
-                <h1 id="html5style2h1">StarTrackr!</h1>
+            <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+                <h1 id="html5-ch1-7h1">StarTrackr!</h1>
                 <div class="col-12">
                     <img class="logo" src="img/flexy-logo.png">
                 </div><!-- end-col-12 -->
