--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <li><a href="./membership.html">Products</a></li>
                         <li><a href="./news.html">Blog</a></li>
                         <li><a href="./starter-page.html">Specials</a></li>
-                        <li><a href="./welcome.html">Contact</a></li>
+                        <li><a href="./creatingawebsite.html">Contact</a></li>
                     </ul>
                 </nav>
             </div><!-- col-12 -->
