--- a/index.html
+++ b/index.html
@@ -85,6 +85,48 @@
     </head>
 
     <body>
+		<body>
+		<div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+                
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+				<h1 id="html5style2h1">StarTrackr!</h1>
+            </header>
+            <br class="clear">
+
+            <div class="row">
+                <div class="col-12">
+                    <nav role="navigation" id="nav">
+                        <input class="trigger" type="checkbox" id="mainNavButton">
+                        <label for="mainNavButton" onclick>Menu</label>
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./index[1].html">About Us</a></li>
+                            <li><a href="./membership.html">Products</a></li>
+                            <li><a href="./news.html">Blog</a></li>
+                            <li><a href="./starter-page.html">Specials</a></li>
+                            <li><a href="./creatingawebsite.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div><!-- col-12 -->
+            </div><!-- end-.row -->
+
+            <div class="row">
+              <div class="çol-12">
+                  <img src="img/kite.png" ;>
+              </div>
+          </div><!-- end-.row -->
+		
+            <div class="data" id="#html5-ch1-7content">
+                
+				<div class="row">
+                    <div class="çol-12" padding="2%">
+                        <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br> 
+						Award winning accommodation, self catering or bed and breakfast</h2>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
 	    <div class="row">
             <div class="col-12">
                 <nav role="navigation" id="nav">
@@ -100,14 +142,14 @@
                     </ul>
                 </nav>
             </div><!-- col-12 -->
-        </div><!-- end-.row -->
+        </div><!-- end-.row --
 
         <div class="wrapper">
-            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> --
                 <h1 id="html5style2h1">StarTrackr!</h1>
                 <div class="col-12">
                     <img class="logo" src="img/flexy-logo.png">
-                </div><!-- end-col-12 -->
+                </div><!-- end-col-12 --
             </header>
             <br class="clear">
 
@@ -131,7 +173,7 @@
                             <li><a href="#">Gift Ideas</a></li>
                         </ul>
                     </div>
-                </div><!-- end-col-12 -->
+            <!-- </div> end-col-12 --
             </div><!-- end-row -->
             <p id="intro">
                 Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.
