--- a/index[1].html
+++ b/index[1].html
@@ -427,13 +427,13 @@
           </div>
         </div>
       </div>
-      <div class="row" style="background-color: #00AFE1">
-        <div class="col-12">
-          <img id="plane-background" src="./img/plane-background.png">
-        </div>
-      </div>
+                <div class="row" style="background-color: #00AFE1">
+                    <div class="col-12">
+                        <img id="plane-background" src="./img/plane-background.png">
+                    </div>
+                </div>
 
-      <div class="row" style="background-color: #66d4ff">
+                <div class="row" style="background-color: #66d4ff">
         <div class="col-12">
           <h2>Follow Us</h2>
         </div>
@@ -444,50 +444,48 @@
           comment:<br>
           <textarea rows="5" cols="30" name="comment"></textarea>
         </div>
-      </div>
+                </div>
 
-      <div class="row" style="background-color: 66d4ff">
-        <div class="col-12">
-          <h2>Fine Print</h2>
-          <p id="fine_print">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-      </div>
-    </div> <!-- end-content-->
+                <div class="row" style="background-color: 66d4ff">
+                    <div class="col-12">
+                        <h2>Fine Print</h2>
+                        <p id="fine_print">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                            officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
+            </div> <!-- end-content-->
 
-    <div id="footer">
+            <div id="footer">
 
-      <ul class="social">
-        <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
-        <li><a href="#"><i class="instagram"></i></i></a></li>
-      </ul>
-      <p>
-        &copy; Copyright 2010 CelebriTracker Productions
-      </p>
-    </div>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+                    <li><a href="#"><i class="instagram"></i></i></a></li>
+                </ul>
+                <p> &copy; Copyright 2010 CelebriTracker Productions</p>
+            </div>
 
-  <!-- </div><!-- end-container -->
+            <!-- </div><!-- end-container -->
 
-    <!-- document ready -->
-    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
-    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="./scripts.js"></script>
+            <!-- document ready -->
+            <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
+            <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+            <script type="text/javascript" src="./scripts.js"></script>
 			
-    <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8">
-    <script src="./jquery.easing.1.3.js"></script>
-    <script src="./js/bootstrap.bundle.js.map"></script>
+            <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+            <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
+            <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+            <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8">
+            <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8">
+            <script src="./jquery.easing.1.3.js"></script>
+            <script src="./js/bootstrap.bundle.js.map"></script>
     </div><!-- end-.wrapper -->
 </body>
 
