--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 
         <div class="wrapper">
 			
-			<header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
                 
                 <div class="col-12">
                     <img class="logo" src="img/flexy-logo.png">
