--- a/about.html
+++ b/about.html
@@ -100,9 +100,9 @@
         <div class="wrapper">
 			
 			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-                
+                <img class="logo" src="./img/flexy-logo.png">
                 <div class="col-12">
-                    <img class="logo" src="./img/flexy-logo.png">
+                   <!-- <img class="logo" src="./img/flexy-logo.png"> -->
 				    <h1 id="html5-ch1-7h1">StarTrackr!</h1>
                 </div><!-- end-col-12 -->
 				
