--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
     <body>
 
         <div class="wrapper">
-			
+			<img class="logo" src="./img/flexy-logo.png">
 			<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
                 <img class="logo" src="./img/flexy-logo.png">
                 <div class="col-12">
