--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
                             <li><a href="./membership.html">Products</a></li>
                             <li><a href="./news.html">Blog</a></li>
                             <li><a href="./starter-page.html">Specials</a></li>
-                            <li><a href="./welcome.html">Contact</a></li>
+                            <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">About Us</a></li>
                         </ul>
                     </nav>
@@ -143,6 +143,7 @@
                         </div>
                     </div><!-- end col-12 -->
                 </div> <!-- end class row -->
+			
                 <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
                     <div class="col-12">
                         <img src="images/paper.png" width="95%" ;>
