--- a/about.html
+++ b/about.html
@@ -132,13 +132,13 @@
                   <img src="img/kite.png" ;>
               </div>
           </div><!-- end-.row -->
-                
+            
                 <div class="row">
                     <div class="col-12" style="padding: 2%;">
                         <div id="banner">
                             <div id="banner-wrapper">
-                                <h2 class="dark">Hove the mouse over a small picture to see an enlarged version
-                                </h2>
+                                <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br> 
+						        Award winning accommodation, self catering or bed and breakfast</h2>
                             </div>
                         </div>
                     </div><!-- end col-12 -->
