--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div id="banner">
                             <div id="banner-wrapper">
                                 <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br> 
-						        Award winning accommodation, self catering or bed and breakfast</h2>
+						        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.</h2>
                             </div>
                         </div>
                     </div><!-- end col-12 -->
@@ -142,7 +142,7 @@
             <!-- </div> end-col-12 --
             </div><!-- end-row -->
             <p id="intro">
-                Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.
+                <!-- Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. -->
                 Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
                 You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
             </p>
