--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <!--close top section - content area starts -->
     <!-- </div> <!-- end col-12 --
     </div> <!-- end row -->
-    <!-- <div class="data" id="html5style2content"> -->
+    <!-- <div class="data" id="html5style2content"> --
     <h2 id="html5style2h2">Award winning accommodation, self catering or bed and breakfast</h2>
     <div class="data" id="html5style2leftcol">
         <h3>Cottages, converted barns, caravans</h3>
@@ -258,23 +258,23 @@
         <br>The superb interior of one of our cottages
     </div>
 
-    <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-        <ul><!--start of menu list-->
+    <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>--
+        <ul><!--start of menu list--
             <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
             <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
             <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
             <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
             <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-        </ul><!--end of menu list-->
+        </ul><!--end of menu list--
     </nav>
 
-    <!--</div> removed and replaced with </nav>-->
+    <!--</div> removed and replaced with </nav>--
     <div class="data" id="html5style2midcol">
         <h3>Situated in the BDA's beautiful countryside</h3>
         <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
     </div>
     <br class="clear">
-    
+    -->
     <br class="clear">
     <hr>
         
@@ -614,9 +614,7 @@
             <p>&copy; Kite-It.</p>
         </div>
     </div>
-			</div><!-- end-wrapper --
-    </body>	
-    <!-- end wrapper -->
+			
     <div class="row">
 
         <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
