--- a/about.html
+++ b/about.html
@@ -162,11 +162,11 @@
                                         <li><img src="./BRC-2.jpeg"width="730px" height="440px" ></li>
                                         <li><img src="./BRC-3.jpg" width="730px" height="440px"></li>
 										<li><img src="./BRC-4.jpeg" width="715px" height="445px"></li>
-										<li><img src="./BRC-5.jpeg" width="715px" height="445px"></li>
+										<li><img src="./BRC-5.jpg" width="715px" height="445px"></li>
 										<li><img src="./BRC-6.jpeg" width="715px" height="445px"></li>
-										<li><img src="./BRC-7.jpeg" width="715px" height="445px"></li>
+										<li><img src="./BRC-7.jpg" width="715px" height="445px"></li>
 										<li><img src="./BRC-8.jpeg" width="715px" height="445px"></li>
-										<li><img src="./BRC-9.jpeg" width="715px" height="445px"></li>
+										<li><img src="./BRC-9.jpg" width="715px" height="445px"></li>
                                         <li><img src="./images/tth2.jpeg" width="730px" height="440px"></li>
                                         <li><img src="./images/tth1.jpeg" width="730px" height="440px" ></li>
                                         <li><img src="./CSS/images/tth3.jpeg" width="730px" height="440px"></li>
