--- a/about.html
+++ b/about.html
@@ -117,11 +117,12 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./membership.html">Products</a></li>
-                            <li><a href="./news.html">Blog</a></li>
+                            <li><a href="./membership.html">Membership</a></li>
+                            <li><a href="./news.html">News</a></li>
                             <li><a href="./starter-page.html">Specials</a></li>
                             <li><a href="./creatingawebsite.html">Contact</a></li>
-						    <li><a href="./index[1].html">About Us</a></li>
+						    <li><a href="./index[1].html">Blog</a></li>
+							<li><a href="./index[1].html">Products</a></li>
                         </ul>
                     </nav>
               </div><!-- col-12 -->
