--- a/creatingawebsite.html
+++ b/creatingawebsite.html
@@ -310,7 +310,7 @@
                             <li><a href="./starter-page.html">Specials</a></li>
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
-							<li><a href="./index[1].html">Products</a></li>
+							<li><a href="./index2.html">Products</a></li>
                         </ul>
                 </nav>
             </div><!-- col-12 -->
@@ -1468,6 +1468,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
