--- a/index2.html
+++ b/index2.html
@@ -111,6 +111,16 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
+					<ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./membership.html">Membership</a></li>
+                            <li><a href="./news.html">News</a></li>
+                            <li><a href="./starter-page.html">Specials</a></li>
+                            <li><a href="./creatingawebsite.html">Contact</a></li>
+						    <li><a href="./index[1].html">Blog</a></li>
+							<li><a href="./index[1].html">Products</a></li>
+                        </ul>
                     <div id="banner">
                         <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
                     </div>
