--- a/index2.html
+++ b/index2.html
@@ -119,7 +119,7 @@
                             <li><a href="./starter-page.html">Specials</a></li>
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
-							<li><a href="./index[1].html">Products</a></li>
+							<li><a href="./index2.html">Products</a></li>
                         </ul>
                     <div id="banner">
                         <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
