--- a/index[1].html
+++ b/index[1].html
@@ -113,7 +113,7 @@
                             <li><a href="./starter-page.html">Specials</a></li>
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
-							<li><a href="./index[1].html">Products</a></li>
+							<li><a href="./index2.html">Products</a></li>
                         </ul>
                     </nav>
                 </div><!-- col-12 -->
