--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -272,13 +272,15 @@
                       <input class="trigger" type="checkbox" id="mainNavButton">
                       <label for="mainNavButton" onclick>Menu</label>
                       <ul>
-                          <li><a href="./index.html">Home</a></li>
-                          <li><a href="./index[1].html">About Us</a></li>
-                          <li><a href="./membership.html">Products</a></li>
-                          <li><a href="./news.html">Blog</a></li>
-                          <li><a href="./starter-page.html">Specials</a></li>
-                          <li><a href="./welcome.html">Contact</a></li>
-                      </ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./membership.html">Membership</a></li>
+                            <li><a href="./news.html">News</a></li>
+                            <li><a href="./starter-page.html">Specials</a></li>
+                            <li><a href="./creatingawebsite.html">Contact</a></li>
+						    <li><a href="./index[1].html">Blog</a></li>
+							<li><a href="./index2.html">Products</a></li>
+                        </ul>
                   </nav>
               </div><!-- col-12 -->
           </div><!-- end-.row -->
@@ -1519,4 +1521,5 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
