--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
                 Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
                 You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
             </p>
+			<!--
             <p id="disclaimer">
                 Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
                 like people so their privacy should be respected.
             </p>
+			-->
             <div id="news">
                 <h2>Latest News</h2>
                 <p>
@@ -601,6 +603,10 @@
     <div class="row">
 
         <div class=" col-lg-12 col-md-12  col-sm-12">
+			<p id="disclaimer">
+                Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
+                like people so their privacy should be respected.
+            </p>
 
             <div class="subscribe-accept">
 
