--- a/index.html
+++ b/index.html
@@ -399,22 +399,7 @@
         </div>
 	</div>
 	<!-- </div><!--content section closed--
-	   </div><!-- end content -->
-	<div class="row" style="background-color: 66d4ff">
-		<div class="col-12">
-			
-			<ul class="social">
-                <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
-				<li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
-                <li><a href="#"><i class="instagram"></i></i></a></li>
-            </ul>
-			
-        </div>
-    </div>
-	
-                 
+	   </div><!-- end content -->             
 
         <footer>
         <div class="footer-nav">
@@ -491,6 +476,10 @@
                 <a href="./Myjourneyonline.com.html/disclaimer.html">Disclaimer</a>
 
                 and to receive newsletters from Myjourneyonline.html
+				<p id="disclaimer">
+                Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
+                like people so their privacy should be respected.
+                </p>
 
             </div>
 
