--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 
                 <a href="./Myjourneyonline.com.html/disclaimer.html">Disclaimer</a>
 
-                and to receive newsletters from Myjourneyonline.html
+                and to receive newsletters from Practical HTML5 Projects for fun and Profit!
 
             </div>
 
