--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                             <li><a href="./starter-page.html">Specials</a></li>
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
-							<li><a href="./index[1].html">Products</a></li>
+							<li><a href="./index2.html">Products</a></li>
 							<li><a href="./creating-a-website.html">Contact</a></li>
                         </ul>
                     </nav>
