--- a/index2.html
+++ b/index2.html
@@ -108,6 +108,25 @@
 </head>
 <body>
     <div class="wrapper">
+		<div class="row">
+                <div class="col-12">
+                    <nav role="navigation" id="nav">
+                        <input class="trigger" type="checkbox" id="mainNavButton">
+                        <label for="mainNavButton" onclick>Menu</label>
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./membership.html">Membership</a></li>
+                            <li><a href="./news.html">News</a></li>
+                            <li><a href="./starter-page.html">Specials</a></li>
+                            <li><a href="./creatingawebsite.html">Contact</a></li>
+						    <li><a href="./index[1].html">Blog</a></li>
+							<li><a href="./index2.html">Products</a></li>
+							<li><a href="./creating-a-website.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div><!-- col-12 -->
+            </div><!-- end-.row -->
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
