--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -267,11 +267,11 @@
           <br class="clear">
 
           <div class="row">
-              <div class="col-12">
-                  <nav role="navigation" id="nav">
-                      <input class="trigger" type="checkbox" id="mainNavButton">
-                      <label for="mainNavButton" onclick>Menu</label>
-                      <ul>
+                <div class="col-12">
+                    <nav role="navigation" id="nav">
+                        <input class="trigger" type="checkbox" id="mainNavButton">
+                        <label for="mainNavButton" onclick>Menu</label>
+                        <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./membership.html">Membership</a></li>
@@ -280,10 +280,11 @@
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
 							<li><a href="./index2.html">Products</a></li>
+							<li><a href="./creating-a-website.html">Contact</a></li>
                         </ul>
-                  </nav>
-              </div><!-- col-12 -->
-          </div><!-- end-.row -->
+                    </nav>
+                </div><!-- col-12 -->
+            </div><!-- end-.row -->
 
           <div class="row">
               <div class="çol-12">
@@ -1521,5 +1522,6 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
