--- a/creatingawebsite.html
+++ b/creatingawebsite.html
@@ -297,11 +297,19 @@
     </head>
 
     <body>
-            <div class="row">
-            <div class="col-12">
-                <nav role="navigation" id="nav">
-                    <input class="trigger" type="checkbox" id="mainNavButton">
-                    <label for="mainNavButton" onclick>Menu</label>
+        <div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+                <h1 id="html5style2h1">StarTrackr!</h1>
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+            </header>
+            <br class="clear">
+			<div class="row">
+                <div class="col-12">
+                    <nav role="navigation" id="nav">
+                        <input class="trigger" type="checkbox" id="mainNavButton">
+                        <label for="mainNavButton" onclick>Menu</label>
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
@@ -311,19 +319,11 @@
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
 							<li><a href="./index2.html">Products</a></li>
+							<li><a href="./creating-a-website.html">Contact</a></li>
                         </ul>
-                </nav>
-            </div><!-- col-12 -->
-        </div><!-- end-.row -->
-
-        <div class="wrapper">
-            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
-                <h1 id="html5style2h1">StarTrackr!</h1>
-                <div class="col-12">
-                    <img class="logo" src="img/flexy-logo.png">
-                </div><!-- end-col-12 -->
-            </header>
-            <br class="clear">
+                    </nav>
+                </div><!-- col-12 -->
+            </div><!-- end-.row -->
 
             <div class="row">
                 <div class="çol-12">
