--- a/membership.html
+++ b/membership.html
@@ -302,7 +302,7 @@
 				
             </header>
 
-            <div class="row">
+            <<div class="row">
                 <div class="col-12">
                     <nav role="navigation" id="nav">
                         <input class="trigger" type="checkbox" id="mainNavButton">
@@ -315,11 +315,12 @@
                             <li><a href="./starter-page.html">Specials</a></li>
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
-							<li><a href="./index[1].html">Products</a></li>
+							<li><a href="./index2.html">Products</a></li>
+							<li><a href="./creating-a-website.html">Contact</a></li>
                         </ul>
                     </nav>
-              </div><!-- col-12 -->
-          </div><!-- end-.row -->
+                </div><!-- col-12 -->
+            </div><!-- end-.row -->
 
           <div class="row">
               <div class="çol-12">
