--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                             <li><a href="./creatingawebsite.html">Contact</a></li>
 						    <li><a href="./index[1].html">Blog</a></li>
 							<li><a href="./index2.html">Products</a></li>
+							<li><a href="./creating-a-website.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div><!-- col-12 -->
