--- a/index2.html
+++ b/index2.html
@@ -168,7 +168,10 @@
                         <p>&nbsp;</p>
                     </div>
                 </header>
+			</div>
+		</div>
                 <br class="clear">
+		<div id="content">
                 <div class="col-12"> <!-- close top section - content area starts -->
                     <div id="hnav">
                         <ul>
@@ -180,7 +183,7 @@
                         </ul>
                     </div>
                 </div><!-- end col-12 -->
-                <div id="content">
+                
                     <div class="picture">
                         <p><img title="Koala" alt="Koala" height="82" src="donnas-footer-2.png" width="110"></p>
                       <!--  <p>&nbsp;</p>
@@ -324,7 +327,8 @@
                             </div>
 
                         </div>
-
+                            </div><!-- main-content -->
+					</div><!-- end-content -->
                         <footer role="contentinfo" class="row">
                             <div class="footer-inner">
                                 <div class="col-12">
@@ -371,12 +375,12 @@
                                             </li>
                                         </ul>
                                         <a href=" #" class="drinkaware">Live Life Sensibly</a>
-                                    </div>
+                                    </div><!-- end -footer-nav -->
 
                                     <hr class="full">
 
                                 </div> <!-- end col-12 -->
-                            </div> <!-- end class row -->
+                            </div> <!-- end footer-inner -->
 
                             <div class="row" style="background-color: #66d4ff;">
                                 <div class="col-12">
@@ -574,6 +578,20 @@
                     </div><!-- main-content -->
                 </div><!-- end wrapper -->
             </div><!--end container>-->
+		<!-- Vendor JS Files -->
+                    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+                    <script src="../orris0/aos.css"></script>
+
+                    <script src="../orris0/bootstrap.bundle.min.js"></script>
+
+                    <script src="../orris0/glightbox.min.js"></script>
+                    <script src="../orris0/isotope.pkgd.min.js"></script>
+                    <script src="../orris0/swiper-bundle.min.js"></script>
+                    <script src="../orris0/validate.js"></script>
+                    <!--jQuery JS-->
+                    <script src="../orris0/js/"></script>
+                    <!-- Template Main JS File -->
+                    <script src="../orris0/main.js"></script>
 </body><!-- end body  -->
 
 </html>
