--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -290,14 +290,10 @@
               <div class="çol-12">
                   <img src="img/kite.png" ;>
               </div>
-          </div><!-- end-.row --
-
-    <body> -->
+          </div><!-- end-.row -->
         <div data-role="page" data-overlay-theme="e">
             <!-- HEADER --
 
-            <div class="wrapper"> -->
-        
                 <div id="container-1">	        
                 
                     <header id="main-header"> 
@@ -1487,7 +1483,34 @@
                                         <li><a href="#"><i class="instagram"></i></i></a></li>
                                     </ul>
                                 </div> <!-- end col-3 -->
-                            </div> <!-- end class row -->
+                            </div> 
+			                <!-- end class row -->
+			                <!-- formattedlinks -->
+            <p>Go to <a href="http://www.zdnet.com">www.zdnet.com</a></p>
+            <p>Go to <a href="http://john.cavaliers.org/boring.html">boring page</a></p>
+            <!-- imagemap -->
+            <p>Click inside his mouth...</p>
+            <p><map name="FaceMap" id="FaceMap">
+                <area href="http://edcp.org/factsheets/handfoot.html" shape="poly"
+                    coords="38, 122, 76, 132, 116, 110, 102, 198, 65, 197" title="Smiling Mouth" alt="Mouth" />
+            </map><img src="./face.gif" usemap="#FaceMap" alt="Smiling Face" /></p>
+
+            <!-- Redirect -->
+
+            <h1>The page you want has moved</h1>
+            <p>
+                Please update your bookmarks. The new home page is
+                <a href=" triproot/index.html">
+                triproot/index.html</a>.
+                </p>
+                <p>
+                You should be redirected to the new site in 10 seconds. Click
+                <a href=" triproot/index.html">here</a> to visit the new page immediately.
+                    </p>
+                    </div>
+                </div>
+            </div>
+        </div>
                             <a href="https://orris0.github.io/orris0/index.html"
                                 class="back-to-top d-flex align-items-center justify-content-center"><i
                                     class="bi bi-arrow-up-short"></i></a>
@@ -1522,6 +1545,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
